# favicons

./: pyproject.toml
favicons/: _constants.py  _generate.py  _util.py
