[project]
name = "favicons"
version = "0.2.5"
description = "Favicon generator for Python 3 with strongly typed sync & async APIs, CLI, & HTML generation."
readme = "README.md"
requires-python = ">=3.10.0,<4.0"
license = { text = "BSD-3-Clause-Clear" }
authors = [
  { name = "Matt Love", email = "matt@hyperglass.dev" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics :: Graphics Conversion",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: User Interfaces",
  "Typing :: Typed",
]
dependencies = [
  "pyvips>=2.2.3",
  "rich>=13.7.0",
  "typer>=0.13.1",
]

[project.urls]
Homepage = "https://github.com/mhirsch/favicons"
Repository = "https://github.com/mhirsch/favicons"

[project.scripts]
favicons = "favicons.cli:cli"

[dependency-groups]
dev = [
  "black>=24.2.0",
  "flake8>=7.0.0",
  "isort>=5.13.2",
  "mypy>=1.8.0",
  "ruff>=0.2.1",
  "typing-extensions>=4.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100

[tool.ruff]
exclude = [
  ".git",
  "__pycache__",
  "test.py",
]
lint.ignore = [
  "RET504",
  "D202",
  "S301",
]
line-length = 100
lint.select = ["B", "C", "D", "E", "F", "N", "S", "RET", "W"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
# Disable unused import warning for modules
"favicons/*/__init__.py" = ["F401"]
"favicons/__init__.py" = ["F401"]